fixed social icons alignment and fixed a few responsive bugs

--- a/_source/_assets/css/okta/base/_helpers.scss
+++ b/_source/_assets/css/okta/base/_helpers.scss
@@ -6,8 +6,3 @@
 .is-signed-in {
   display: none;
 }
-
-.flex-justify {
-  display: flex;
-  justify-content: space-between;
-}
