--- a/_source/_assets/css/okta/components/_Footer.scss
+++ b/_source/_assets/css/okta/components/_Footer.scss
@@ -66,7 +66,7 @@
       width: 20px;
       height: 20px;
       display: block;
-      margin-right: 15px;
+      margin: 3.5px 15px 3.5px 0;
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -125,10 +125,15 @@
     align-self: flex-end;
     @include font-weight('mediumbold');
 
-    @include media('<medium') {
+    @include media('<1132px') {
       order: 5;
       width: 100%;
-      text-align: center;
+      text-align: left;
+      margin-top: 23.5px;
+
+      @include media('<=small') {
+        text-align: center;
+      }
     }
   }
 
@@ -137,7 +142,7 @@
     display: flex;
     flex-direction: row;
 
-    @include media('<small') {
+    @include media('<1132px') {
 
       flex-wrap: wrap;
 
@@ -151,17 +156,23 @@
 
       .external-links {
         order: 3;
-        margin-top: 60px;
+
+        @include media('<628px') {
+          margin-top: 60px;
+        }
       }
 
       .social-links {
-        display: none;
+
+        @include media('<=small') {
+          display: none;
+        }
       }
 
       .social-links-small-only {
         order: 4;
         width: 100%;
-        margin-bottom: 47px;
+        margin-bottom: 23.5px;
 
         .footer-links--social {
           display: flex;
